--- a/.github/workflows/mavenci.yml
+++ b/.github/workflows/mavenci.yml
@@ -9,8 +9,8 @@ jobs:
         with:
           java-version: '15'
       - name: Run tests
-        run: mvn test
+        run: cd volunteer-organizer-backend && mvn test
       - name: Package
-        run: mvn -Dmaven.test.skip=true package
+        run: cd volunteer-organizer-backend && mvn -Dmaven.test.skip=true package
 #      - name: Try it!
 #        run: java -cp target/kotlin-maven-1.0-SNAPSHOT-jar-with-dependencies.jar com.mycompany.app.App
