--- a/.github/workflows/mavenci.yml
+++ b/.github/workflows/mavenci.yml
@@ -4,15 +4,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: '15'
       - name: Run tests
         run: mvn test
-        working-directory: ../volunteer-organizer-backend
+        working-directory: ./volunteer-organizer-backend
       - name: Package
         run: mvn -Dmaven.test.skip=true package
-        working-directory: ../volunteer-organizer-backend
+        working-directory: ./volunteer-organizer-backend
 #      - name: Try it!
 #        run: java -cp target/kotlin-maven-1.0-SNAPSHOT-jar-with-dependencies.jar com.mycompany.app.App
