--- a/.github/workflows/mavenci.yml
+++ b/.github/workflows/mavenci.yml
@@ -3,6 +3,9 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./volunteer-organizer-backend
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -10,9 +13,7 @@ jobs:
           java-version: '15'
       - name: Run tests
         run: mvn test
-        working-directory: volunteer-organizer-backend
       - name: Package
         run: mvn -Dmaven.test.skip=true package
-        working-directory: volunteer-organizer-backend
 #      - name: Try it!
 #        run: java -cp target/kotlin-maven-1.0-SNAPSHOT-jar-with-dependencies.jar com.mycompany.app.App
