--- a/.gitignore
+++ b/.gitignore
@@ -86,10 +86,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-/.idea/modules.xml
-/.idea/jarRepositories.xml
-/.idea/compiler.xml
-/.idea/libraries/
+volunteer-organizer-backend/.idea/modules.xml
+volunteer-organizer-backend/.idea/jarRepositories.xml
+volunteer-organizer-backend/.idea/compiler.xml
+volunteer-organizer-backend/.idea/libraries/
 *.iws
 *.iml
 *.ipr
