--- a/volunteer-organizer-backend/pom.xml
+++ b/volunteer-organizer-backend/pom.xml
@@ -21,6 +21,12 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-core-jvm</artifactId>
             <version>${ktor_version}</version>
